fix bug "The Performance description is not centered horizontally."

--- a/src/app/components/home-page/performance-slider/performance-slider.component.scss
+++ b/src/app/components/home-page/performance-slider/performance-slider.component.scss
@@ -134,7 +134,6 @@ gallery {
 .performance__venue {
   color: #fff;
   line-height: 1.5;
-  width: 268px;
   height: 27px;
   font-family: Montserrat-SemiBold;
   font-size: 18px;
